@@ -1,3 +1,6 @@
+2008-10-24 yusei
+* Use translated role name in entity_role field in third party report.
+
 2008-10-14 yusei
 * Start to develop version 5.3.
 
